<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.marina.pokusajstoti.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_control"
        android:name="com.marina.pokusajstoti.ui.control.ControlFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_control" />

    <fragment
        android:id="@+id/navigation_statistics"
        android:name="com.marina.pokusajstoti.ui.settings.StatisticsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_statistics" />
</navigation>